# slider

./: hours.md  pyproject.toml  slider.py
data/: 2020.csv  2021.csv  data.csv
