[tool.poetry]
name = "slider"
version = "0.1.0"
description = ""
authors = ["Vida Péter <peter.vida@atos.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
data-science-types = "^0.2.18"
yapf = "^0.31.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
